# todo-demo-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
migrations/2018-02-17-124539_create_todos/: down.sql  up.sql
src/: config.rs  main.rs
src/common/: futures_ext.rs  mod.rs  request_ext.rs  response_ext.rs
src/db/: connection_pool.rs  functions.rs  mod.rs  paginated.rs  schema.rs  todos_repo.rs
src/http/: assertions.rs  mod.rs  server.rs  todos_controller.rs
src/result/: mod.rs
src/validators/: mod.rs  todos_validator.rs
